--- a/库运行测试.ipynb
+++ b/库运行测试.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,6 +41,45 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n",
+      "_name\n",
+      "_FuncPtr\n",
+      "_handle\n",
+      "smc_board_init\n",
+      "smc_board_close\n",
+      "smc_get_position_unit\n",
+      "smc_write_sevon_pin\n",
+      "smc_basic_run\n",
+      "smc_basic_stop\n",
+      "smc_set_home_profile_unit\n",
+      "smc_set_home_position_unit\n",
+      "smc_set_homemode\n",
+      "smc_get_homemode\n",
+      "smc_home_move\n",
+      "smc_ptt_table_unit\n",
+      "smc_pts_table_unit\n",
+      "smc_pvt_move\n",
+      "smc_t_pmove_extern_unit\n"
+     ]
+    }
+   ],
+   "source": [
+    "####展示smc库目前已支持的函数\n",
+    "functions=smc.smc_dll.__dict__.keys()\n",
+    "print(len(functions))\n",
+    "for function in functions:\n",
+    "    print(function)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#串口连接\n",
@@ -49,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +97,7 @@
        "0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +118,7 @@
        "0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +139,7 @@
        "(0, 0, 3.0, 0, 1)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +164,7 @@
        "0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -153,14 +192,39 @@
        "0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#设置pts运动参数\n",
+    "ptime=[0,1,2,3,4,5,6]\n",
+    "ppos=[0,15000,55000,140000,380000,650000,680000]\n",
+    "pper=[0,20,0,60,0,20,80]\n",
+    "\n",
+    "smc.pts_table_unit(0,0,7,ptime,ppos,pper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#开始PVT运动\n",
-    "mc.pvt_move(0,1,[0])   "
+    "smc.pvt_move(0,1,[0])   "
    ]
   },
   {
@@ -206,9 +270,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#断开0号控制器的连接\n",
     "smc.board_close(0)"
